--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ width: 50%;
 
 .btn {
     color: black;
-    background-color: blue;
+    background-color: aqua;
     padding: 10px 20px;
     border-radius: 20px;
 }
